// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hume > gets all urls from docs config 1`] = `
[
  "hume.docs.buildwithfern.com/intro",
  "hume.docs.buildwithfern.com/docs/introduction/api-key",
  "hume.docs.buildwithfern.com/support",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/overview",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/quickstart/typescript",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/quickstart/python",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/evi-2",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/configuration",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/voices",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/tool-use",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/phone-calling",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/prompting",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/custom-language-model",
  "hume.docs.buildwithfern.com/docs/empathic-voice-interface-evi/faq",
  "hume.docs.buildwithfern.com/docs/expression-measurement/overview",
  "hume.docs.buildwithfern.com/docs/expression-measurement/rest",
  "hume.docs.buildwithfern.com/docs/expression-measurement/websocket",
  "hume.docs.buildwithfern.com/docs/expression-measurement/custom-models/overview",
  "hume.docs.buildwithfern.com/docs/expression-measurement/custom-models/creating-your-dataset",
  "hume.docs.buildwithfern.com/docs/expression-measurement/custom-models/training-a-custom-model",
  "hume.docs.buildwithfern.com/docs/expression-measurement/custom-models/evaluating-your-custom-model",
  "hume.docs.buildwithfern.com/docs/expression-measurement/faq",
  "hume.docs.buildwithfern.com/docs/resources/billing",
  "hume.docs.buildwithfern.com/docs/resources/errors",
  "hume.docs.buildwithfern.com/docs/resources/science",
  "hume.docs.buildwithfern.com/docs/resources/use-case-guidelines",
  "hume.docs.buildwithfern.com/docs/resources/privacy",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/list-tools",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/create-tool",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/list-tool-versions",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/create-tool-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/delete-tool",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/update-tool-name",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/get-tool-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/delete-tool-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/tools/update-tool-description",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/list-prompts",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/create-prompt",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/list-prompt-versions",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/create-prompt-verison",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/delete-prompt",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/update-prompt-name",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/get-prompt-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/delete-prompt-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/prompts/update-prompt-description",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/list-custom-voices",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/create-custom-voice",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/get-custom-voice",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/create-custom-voice-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/delete-custom-voice",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/custom-voices/update-custom-voice-name",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/list-configs",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/create-config",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/list-config-versions",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/create-config-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/delete-config",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/update-config-name",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/get-config-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/delete-config-version",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/configs/update-config-description",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chats/list-chats",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chats/list-chat-events",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chats/get-audio",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chat-groups/list-chat-groups",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chat-groups/get-chat-group",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chat-groups/list-chat-group-events",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chat-groups/get-audio",
  "hume.docs.buildwithfern.com/reference/empathic-voice-interface-evi/chat/chat",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/list-jobs",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/start-inference-job",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/get-job-details",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/get-job-predictions",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/get-job-artifacts",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/batch/start-inference-job-from-local-file",
  "hume.docs.buildwithfern.com/reference/expression-measurement-api/stream/stream",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/list-files",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/create-files",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/upload-file",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/get-file",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/delete-file",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/update-file-name",
  "hume.docs.buildwithfern.com/reference/custom-models-api/files/get-file-predictions",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/list-datasets",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/create-dataset",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/get-dataset",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/create-dataset-version",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/delete-dataset",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/list-dataset-versions",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/list-dataset-files",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/get-dataset-version",
  "hume.docs.buildwithfern.com/reference/custom-models-api/datasets/list-dataset-version-files",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/list-models",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/get-model-details",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/update-model-name",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/list-model-versions",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/get-model-version",
  "hume.docs.buildwithfern.com/reference/custom-models-api/models/update-model-description",
  "hume.docs.buildwithfern.com/reference/custom-models-api/jobs/start-training-job",
  "hume.docs.buildwithfern.com/reference/custom-models-api/jobs/start-custom-models-inference-job",
  "hume.docs.buildwithfern.com/changelog",
]
`;

exports[`hume > gets navigation root for /docs 1`] = `
{
  "redirect": "intro",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /reference 1`] = `
{
  "redirect": "reference/empathic-voice-interface-evi/tools/list-tools",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /reference/expression-measurement-api/stream 1`] = `
{
  "redirect": "reference/expression-measurement-api/stream/stream",
  "type": "redirect",
}
`;

exports[`hume > gets navigation root for /support 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": false,
  "icon": undefined,
  "id": "root.uv.docs.docs.introduction.support",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "docs/pages/documentation/introduction/support.mdx",
  "slug": "support",
  "title": "Support",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`hume > gets navigation root for /support 2`] = `undefined`;

exports[`hume > gets navigation root for /support 3`] = `"docs"`;
